--- a/workspace_htmlcss/css/practice/practice_alone_1.html
+++ b/workspace_htmlcss/css/practice/practice_alone_1.html
@@ -8,6 +8,47 @@
   <link rel="stylesheet" href="practice_alone_1.css">
 </head>
 <body>
-  <div class="container"></div>
+  <div class="container">
+    <ul class="item-box">
+      <li>
+        <a href="#">ITEM_1</a>
+        <ul class="sub-menu">
+          <li><a href="#">ITEM_1-1</a></li>
+          <li><a href="#">ITEM_1-2</a></li>
+          <li><a href="#">ITEM_1-3</a></li>
+        </ul>
+      </li>
+    </ul>
+    <ul class="item-box">
+      <li>
+        <a href="#">ITEM_2</a>
+        <ul class="sub-menu">
+          <li><a href="#">ITEM_2-1</a></li>
+          <li><a href="#">ITEM_2-2</a></li>
+          <li><a href="#">ITEM_2-3</a></li>
+        </ul>
+      </li>
+    </ul>
+    <ul class="item-box">
+      <li>
+        <a href="#">ITEM_3</a>
+        <ul class="sub-menu">
+          <li><a href="#">ITEM_3-1</a></li>
+          <li><a href="#">ITEM_3-2</a></li>
+          <li><a href="#">ITEM_3-3</a></li>
+        </ul>
+      </li>
+    </ul>
+    <ul class="item-box">
+      <li>
+        <a href="#">ITEM_4</a>
+        <ul class="sub-menu">
+          <li><a href="#">ITEM_4-1</a></li>
+          <li><a href="#">ITEM_4-2</a></li>
+          <li><a href="#">ITEM_4-3</a></li>
+        </ul>
+      </li>
+    </ul>
+  </div>
 </body>
 </html>
