--- a/workspace_htmlcss/css/practice/practice_2.html
+++ b/workspace_htmlcss/css/practice/practice_2.html
@@ -25,11 +25,15 @@
       </div>
       <div class="footer">
         <div>Real Estate Agent</div>
-        <img src="인물_1.jpg" alt="">
-        <div>Sandy Fox
-          <div>052-777-888</div>
+        <div>
+          <img src="인물_1.jpg" alt="">
+          <div><span>Sandy Fox</span>
+            <div>052-777-888</div>
+          </div>
+          <div class="button">
+            <button type="button">INQURE</button>
+          </div>
         </div>
-        <div class="button"><button type="button">INQURE</button></div>
       </div>
     </div>
   </div>
