--- a/workspace_htmlcss/css/practice/practice3.html
+++ b/workspace_htmlcss/css/practice/practice3.html
@@ -24,9 +24,23 @@
         <h2>천문과학교육관소개</h2>
         <span>천문과학관으로 놀러오세요.</span>
       </div>
-      
     </div>
-    <div class="content"></div>
+    <div class="content">
+      <div class="content-1">
+        <h3>공지사항</h3>
+        <ul>
+          <li><a href="">111</a></li>
+          <li><a href="">222</a></li>
+          <li><a href="">333</a></li>
+          <li><a href="">444</a></li>
+          </ul>
+        <div>
+          <img src="link.jpg" alt=""></div>
+        <div>
+          <img src="banner.jpg" alt=""></div>
+      </div>
+    </div>
+
     <div class="footer"></div>
   </div>
 </body>
