--- a/workspace_htmlcss/css/practice/practice3.html
+++ b/workspace_htmlcss/css/practice/practice3.html
@@ -27,17 +27,21 @@
     </div>
     <div class="content">
       <div class="content-1">
-        <h3>공지사항</h3>
-        <ul>
-          <li><a href="">111</a></li>
-          <li><a href="">222</a></li>
-          <li><a href="">333</a></li>
-          <li><a href="">444</a></li>
-          </ul>
         <div>
-          <img src="link.jpg" alt=""></div>
+          <h3>공지사항</h3>
+          <ul>
+            <li><a href="">111</a></li>
+            <li><a href="">222</a></li>
+            <li><a href="">333</a></li>
+            <li><a href="">444</a></li>
+            </ul>
+        </div>
         <div>
-          <img src="banner.jpg" alt=""></div>
+          <img src="link.jpg" alt="">
+        </div>
+        <div>
+          <img src="banner.jpg" alt="">
+        </div>
       </div>
     </div>
 
