--- a/7월 9일 평가대비/html+css/thrid.html
+++ b/7월 9일 평가대비/html+css/thrid.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="회원가입_화면구현.css">
+  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="third.css">
 </head>
 <body>
-<div class="wrap">
+  <div class="wrap">
     <table>
       <colgroup>
         <col width="18%">
