--- a/7월 9일 평가대비/html+css/thrid.html
+++ b/7월 9일 평가대비/html+css/thrid.html
@@ -8,15 +8,14 @@
   <link rel="stylesheet" href="third.css">
 </head>
 <body>
-  <div class="wrap">
+  <div class="container">
     <table>
       <colgroup>
         <col width="18%">
         <col width="*">
       </colgroup>
       <div>회원가입</div>
-  
-     <div>
+     <thead>
       <tr class="t1">
         <td>회원구분<span class="col-red">*</span></td>
         <td>
@@ -24,7 +23,7 @@
           <input type="radio" name="contry">외국인회원(foreigner)
         </td>
       </tr>
-    </div>
+    </thead>
     </table>
   
     <table>
