--- a/workspace_script/배열과객체추가내용.html
+++ b/workspace_script/배열과객체추가내용.html
@@ -50,15 +50,11 @@
 
     //그렇다면 배열 안의 각각의 요소를 다시 풀어서 배열에 넣으려면??? for if 말고
     const arr6 = [];
-    arr6.push({arr3});
-    arr6.push({arr4});
+    arr6.push(...arr3);
+    arr6.push(...arr4);
 
     console.log(arr6)
     
-
-
-
-
   </script>
 </body>
 </html>
