--- a/7월 9일 평가대비/html+css/first.html
+++ b/7월 9일 평가대비/html+css/first.html
@@ -16,7 +16,7 @@
           <li><a href="#">HOME</a></li>
           <li><a href="#">ABOUT</a></li>
           <li><a href="#">PRODUCTS</a></li>
-          <li><a href="#">CONTACT</a></li>
+          <li><a href="/second.html">CONTACT</a></li>
         </ul>
       </div>
       <div class="header-input">
