--- a/7월 9일 평가대비/20240709_Grid구현_김현경/test2.html
+++ b/7월 9일 평가대비/20240709_Grid구현_김현경/test2.html
@@ -36,6 +36,7 @@ tr, td{
 <body>
 <h3>문제 1번. HTML및 CSS 내용은 수정 금지!</h3>
 <div>
+	<!-- 열너비 고정 안하면, 안의 내용만큼 자동으로 크기가 바뀜 -->
 	<table>
 		<thead>
 			<tr>
