--- a/workspace_spring/Shop_answer/src/main/frontend_answer/public/index.html
+++ b/workspace_spring/Shop_answer/src/main/frontend_answer/public/index.html
@@ -27,6 +27,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     
     <title>Answer Shop</title>
+    <script src="https://t1.kakaocdn.net/kakao_js_sdk/2.7.2/kakao.js" integrity="sha384-4isBVZ02Sicjf8XHbphmDqKPF9IdtDHzQm7IdcIhsBHx14UU9s4FrOKdDrjDCm9M" crossorigin="anonymous"></script>
+    <script>
+      kakao.init('4efa41168cbd61da600f3efe717305a8')
+      console.log(Kakao.isInitialized())
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
